stateDiagram-v2
    %% Ownership after refactor phases 1-4 (docs/design/state-machine-ownership.md).
    %% controllerTask is the SINGLE writer of gState. Every transition below is
    %% written by it, in response to an event posted by another task:
    %%   - syncTask posts WiFi events (WifiPortalUp/Joined/SoftAP) and weigh/
    %%     reconcile events (StubReady/BeginWeigh/SpoolForeign/ForeignRegistering/
    %%     Weighed/NeedsReconcile), driven off its own local SyncPhase.
    %%   - nfcTask posts tag-detection events (TagDetecting/TagBlank/AwaitConfirm/
    %%     FormatConfirmed/TagValid/TagReadErr/ReconcileDone) and ReturnToIdle,
    %%     driven off its own local NfcPhase.
    %% nfcTask and syncTask no longer write gState at all. Labels show the trigger;
    %% "idle*" = the controller picks Idle (joined) vs IdleNoWiFi (SoftAP).

    [*] --> Boot

    Boot --> WiFiSetupMode: no saved creds -> portal opens (WifiPortalUp)
    Boot --> Idle: saved creds join immediately (WifiJoined)
    note right of Boot
        nfcTask does NOT poll the reader in Boot or
        WiFiSetupMode (the SoftAP-RF bus-hang fix,
        9280424); it holds local phase Waiting there.
    end note

    WiFiSetupMode --> Idle: credentials accepted (WifiJoined)
    WiFiSetupMode --> IdleNoWiFi: portal timeout -> SoftAP (WifiSoftAP)

    Idle --> TagDetecting: nfc reports a tag (TagDetecting)
    IdleNoWiFi --> TagDetecting: nfc reports a tag (TagDetecting)
    IdleNoWiFi --> Idle: station WiFi comes up later (WifiJoined)

    TagDetecting --> Idle: false trigger (ReturnToIdle, idle*)
    TagDetecting --> TagReadError: inconsistent/corrupt (TagReadErr)
    TagDetecting --> BlankTagFound: 3 reads confirm, unformatted (TagBlank)
    TagDetecting --> ValidTagFound: 3 reads confirm, valid OPT (TagValid)

    TagReadError --> Idle: tag removed (ReturnToIdle, idle*)

    BlankTagFound --> AwaitingFormatConfirm: prompt + 5s countdown (AwaitConfirm)
    note right of AwaitingFormatConfirm
        Confirm-by-inaction: live 5..4..3..2..1 countdown,
        LED blinks accelerating. Remove to cancel; leave
        in place to 0 to confirm. nfcTask times it locally.
    end note
    AwaitingFormatConfirm --> FormattingAndRegistering: countdown 0 (FormatConfirmed)
    AwaitingFormatConfirm --> Idle: removed during countdown (ReturnToIdle, idle*)
    FormattingAndRegistering --> ValidTagFound: formatted, nil UUID (TagValid)

    ValidTagFound --> Present: blank -> mint UUID + stub record (StubReady)
    ValidTagFound --> ForeignTagFound: uuid not in local store (SpoolForeign)
    ValidTagFound --> WeighingAndSync: uuid matches a known spool (BeginWeigh)

    ForeignTagFound --> RegisteringForeignTag: adopt product + create record (ForeignRegistering)
    RegisteringForeignTag --> WeighingAndSync: local record created (BeginWeigh)
    ForeignTagFound --> Idle: tag removed (ReturnToIdle, idle*)
    RegisteringForeignTag --> Idle: tag removed mid-registration (ReturnToIdle, idle*)

    WeighingAndSync --> Present: weigh once; write Aux; append weigh event (Weighed)

    Present --> ReconcilingMainSection: 1s poll detects a local-store edit (NeedsReconcile)
    ReconcilingMainSection --> Present: nfc rewrote tag Main (ReconcileDone)
    Present --> Idle: tag removed, 2 misses (ReturnToIdle, idle*)
